--- a/DuckLibras/app/src/main/res/values/colors.xml
+++ b/DuckLibras/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="laranja">#BF781B</color>
+    <color name="laranja2">#754910</color>
+    <color name="laranjaclaro">#FFB755</color>
+    <color name="azulclaro">#B7D8E7</color>
+    <color name="azulclaro2">#BDE5FE</color>
+    <color name="azulescuro">#001928</color>
+    <color name="azulescuro2">#255069</color>
+    <color name="azulclaro3">#6fbff0</color>
 </resources>
