--- a/DuckLibras/app/src/main/res/values/colors.xml
+++ b/DuckLibras/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="azulescuro">#001928</color>
     <color name="azulescuro2">#255069</color>
     <color name="azulclaro3">#6fbff0</color>
+     <color name="fundo_app">#F8FAFC</color>
+    <color name="card_background">#FFFFFF</color>
+    <color name="borda_cards">#E2E8F0</color>
+    <color name="texto_primario">#1E293B</color>
+    <color name="texto_secundario">#64748B</color>
+    <color name="cor_primaria">#0F766E</color>
+    <color name="cor_primaria_clara">#2DD4BF</color>
+    <color name="cor_secundaria">#0EA5E9</color>
 </resources>
