--- a/DuckLibras/app/src/main/res/values/styles.xml
+++ b/DuckLibras/app/src/main/res/values/styles.xml
@@ -29,4 +29,31 @@
         <item name="android:textStyle">bold</item>
         <item name="textAllCaps">false</item>
     </style>
+     <style name="Theme.DuckLibras" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/cor_primaria</item>
+        <item name="colorPrimaryContainer">@color/cor_primaria_clara</item>
+        <item name="colorSecondary">@color/cor_secundaria</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+    </style>
+    <style name="ButtonPrincipal" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/cor_primaria</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="ButtonSecundario" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="strokeColor">@color/cor_primaria</item>
+        <item name="android:textColor">@color/cor_primaria</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="ButtonPalavra" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="strokeColor">@color/cor_secundaria</item>
+        <item name="android:textColor">@color/cor_secundaria</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
