--- a/DuckLibras/app/src/main/res/values/styles.xml
+++ b/DuckLibras/app/src/main/res/values/styles.xml
@@ -56,4 +56,32 @@
         <item name="android:paddingRight">16dp</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    <style name="ToolbarTitle" parent="TextAppearance.Material3.TitleLarge">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:letterSpacing">0.02</item>
+</style>
+<style name="ButtonPrincipal" parent="Widget.Material3.Button">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">52dp</item>
+    <item name="android:layout_weight">1</item>
+    <item name="backgroundTint">@color/cor_primaria</item>
+    <item name="android:textColor">@color/branco</item>
+    <item name="cornerRadius">12dp</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:paddingLeft">16dp</item>
+    <item name="android:paddingRight">16dp</item>
+</style>
+<style name="ButtonSecundario" parent="Widget.Material3.Button.OutlinedButton">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">52dp</item>
+    <item name="android:layout_weight">1</item>
+    <item name="strokeColor">@color/cor_primaria</item>
+    <item name="strokeWidth">1.5dp</item>
+    <item name="android:textColor">@color/cor_primaria</item>
+    <item name="cornerRadius">12dp</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:paddingLeft">16dp</item>
+    <item name="android:paddingRight">16dp</item>
+</style>
 </resources>
