--- a/DuckLibras/app/src/main/res/values/styles.xml
+++ b/DuckLibras/app/src/main/res/values/styles.xml
@@ -84,4 +84,16 @@
     <item name="android:paddingLeft">16dp</item>
     <item name="android:paddingRight">16dp</item>
 </style>
+    <style name="ButtonPalavraRapida" parent="Widget.Material3.Button.OutlinedButton">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">42dp</item>
+    <item name="strokeColor">@color/cor_secundaria</item>
+    <item name="strokeWidth">1dp</item>
+    <item name="android:textColor">@color/cor_secundaria</item>
+    <item name="cornerRadius">21dp</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:paddingLeft">16dp</item>
+    <item name="android:paddingRight">16dp</item>
+    <item name="android:textAllCaps">false</item>
+</style>
 </resources>
