--- a/Mobile/app/src/main/res/layout/aula_1_u.xml
+++ b/Mobile/app/src/main/res/layout/aula_1_u.xml
@@ -2,24 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Text1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/azulclaro3">
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="217dp"
-        android:layout_height="263dp"
-        android:layout_marginBottom="317dp"
-        android:src="@drawable/a"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aula1" />
+    android:background="#6fbff0">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
@@ -30,7 +18,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textv">
+        app:layout_constraintTop_toBottomOf="@+id/imageView26">
 
         <ImageView
             android:id="@+id/imageView4"
@@ -78,11 +66,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="330dp"
         android:padding="5dp"
         android:text="Aula 1 _____________________________________"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView9"
+        app:layout_constraintBottom_toTopOf="@+id/imageView26"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,14 +78,38 @@
         android:id="@+id/textv"
         android:layout_width="177dp"
         android:layout_height="87dp"
-        android:layout_marginBottom="535dp"
         android:padding="15sp"
         android:text="VOGAIS"
         android:textSize="40sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/aula1" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="213dp"
+        android:layout_height="231dp"
+        android:layout_marginBottom="317dp"
+        android:src="@drawable/u"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aula1" />
+
+    <ImageView
+        android:id="@+id/imageView26"
+        android:layout_width="244dp"
+        android:layout_height="199dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="67dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aula1"
+        app:srcCompat="@drawable/u_1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
