Organização Feita com Sucesso em mobile

--- a/Mobile/app/src/main/res/layout/dicionario.xml
+++ b/Mobile/app/src/main/res/layout/dicionario.xml
@@ -8,7 +8,7 @@
     android:backgroundTint="#FFFFFF"
     android:backgroundTintMode="add"
     android:clickable="true"
-    tools:context=".DicionarioActivity">
+    tools:context=".Dicionario.presetation.DicionarioActivity">
 
     <EditText
         android:id="@+id/editTextText"
