--- a/Mobile/app/src/main/res/layout/ponto.xml
+++ b/Mobile/app/src/main/res/layout/ponto.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layoutDescription="@xml/activity_main_scene"
-    tools:context=".MainActivity"
+    tools:context=".Menu.presetation.MainActivity"
     tools:visibility="visible">
 
     <LinearLayout
