--- a/Mobile/app/src/main/res/layout/activity_cadastro.xml
+++ b/Mobile/app/src/main/res/layout/activity_cadastro.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Cadastro">
+    tools:context=".Cadastro.presetation.Cadastro">
     <TextView
         android:id="@+id/titulocadastro"
         android:layout_width="wrap_content"
