--- a/Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Mobile/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Login">
+    tools:context=".Login.presetation.Login">
 
   <ImageView
       android:id="@+id/logo"
