--- a/Mobile/app/src/main/res/layout/activity_main.xml
+++ b/Mobile/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".Menu.presetation.MainActivity">
 
     <ImageView
         android:id="@+id/imageView2"
