--- a/MobileDuckLibras/app/src/main/res/layout/activity_cadastro.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/activity_cadastro.xml
@@ -7,65 +7,80 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     tools:context=".Cadastro.presetation.Cadastro">
+
     <TextView
         android:id="@+id/titulocadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/titulodocadastro"
-        android:textSize="50sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:layout_marginTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/titulodocadastro"
+        android:textColor="@color/white"
+        android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/componentes"
         style="@style/TelaLogin"
-        app:layout_constraintTop_toBottomOf="@id/titulocadastro"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/titulocadastro" />
 
     <EditText
         android:id="@+id/edit_nome"
         style="@style/Edite_Text"
-        android:hint="Nome"
         android:drawableRight="@drawable/nome"
+        android:hint="Nome"
         android:inputType="text"
-        app:layout_constraintTop_toTopOf="@id/componentes"
+        app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
-        app:layout_constraintEnd_toEndOf="@id/componentes"/>
+        app:layout_constraintTop_toTopOf="@id/componentes" />
 
     <EditText
         android:id="@+id/edit_email"
         style="@style/Edite_Text"
-        android:hint="Email"
         android:drawableRight="@drawable/ic_email"
+        android:hint="Email"
         android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@id/edit_nome"
+        app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
-        app:layout_constraintEnd_toEndOf="@id/componentes"/>
+        app:layout_constraintTop_toBottomOf="@id/edit_nome" />
 
     <EditText
         android:id="@+id/edit_senha"
         style="@style/Edite_Text"
+        android:drawableRight="@drawable/ic_olho"
         android:hint="Senha"
         android:inputType="textPassword"
-        android:drawableRight="@drawable/ic_olho"
-        app:layout_constraintTop_toBottomOf="@id/edit_email"
+        app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
-        app:layout_constraintEnd_toEndOf="@id/componentes"/>
+        app:layout_constraintTop_toBottomOf="@id/edit_email" />
+
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/appCompatButton"
         style="@style/Button"
-        android:text="Cadastrar"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/componentes"
+        android:text="Cadastrar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/componentes" />
 
-
-
+    <TextView
+        android:id="@+id/issue_lb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="264dp"
+        android:padding="10dp"
+        android:text="[PLACE ROUDER]"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/componentes"
+        tools:layout_editor_absoluteX="118dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
