--- a/MobileDuckLibras/app/src/main/res/layout/home.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Menu.presetation.MainActivity">
+    tools:context=".Menu.presetation. HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
