--- a/MobileDuckLibras/app/src/main/res/layout/activity_cadastro.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/activity_cadastro.xml
@@ -32,7 +32,7 @@
         android:id="@+id/edit_nome"
         style="@style/Edite_Text"
         android:drawableRight="@drawable/nome"
-        android:hint="Nome"
+        android:hint="@string/nome_lb"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
@@ -42,7 +42,7 @@
         android:id="@+id/edit_email"
         style="@style/Edite_Text"
         android:drawableRight="@drawable/ic_email"
-        android:hint="Email"
+        android:hint="@string/email_lb"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
@@ -52,7 +52,7 @@
         android:id="@+id/edit_senha"
         style="@style/Edite_Text"
         android:drawableRight="@drawable/ic_olho"
-        android:hint="Senha"
+        android:hint="@string/pass_lb"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@id/componentes"
         app:layout_constraintStart_toStartOf="@id/componentes"
@@ -74,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
         android:padding="10dp"
+        android:text="@string/issue_lb"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:visibility="visible"
