--- a/MobileDuckLibras/app/src/main/res/layout/dicionario.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/dicionario.xml
@@ -43,7 +43,7 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             app:boxStrokeColor="@color/cor_primaria"
             app:hintEnabled="false"
@@ -53,7 +53,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/searchEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:hint="Buscar palavra..."
                 android:inputType="text"
                 android:textColor="@color/texto_primario"
