--- a/MobileDuckLibras/app/src/main/res/layout/activity_login.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,9 @@
       android:id="@+id/text_tela_cadastro"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:clickable="true"
+      android:focusable="true"
+      android:onClick="abrirCadastro"
       android:text="@string/Text_cadastro"
       android:textColor="@color/white"
       android:textSize="20sp"
